@@ -2,9 +2,14 @@
 package com.hedera.node.app.service.addressbook.impl.test.handlers;
 
 import static com.hedera.node.app.hapi.utils.CommonPbjConverters.asBytes;
-import static com.hedera.node.app.ids.schemas.V0490EntityIdSchema.ENTITY_ID_STATE_KEY;
-import static com.hedera.node.app.ids.schemas.V0590EntityIdSchema.ENTITY_COUNTS_KEY;
-import static com.hedera.node.app.service.addressbook.impl.schemas.V053AddressBookSchema.NODES_KEY;
+import static com.hedera.node.app.service.addressbook.impl.schemas.V053AddressBookSchema.NODES_STATE_ID;
+import static com.hedera.node.app.service.addressbook.impl.schemas.V053AddressBookSchema.NODES_STATE_LABEL;
+import static com.hedera.node.app.service.addressbook.impl.schemas.V068AddressBookSchema.ACCOUNT_NODE_REL_STATE_ID;
+import static com.hedera.node.app.service.addressbook.impl.schemas.V068AddressBookSchema.ACCOUNT_NODE_REL_STATE_LABEL;
+import static com.hedera.node.app.service.entityid.impl.schemas.V0490EntityIdSchema.ENTITY_ID_STATE_ID;
+import static com.hedera.node.app.service.entityid.impl.schemas.V0490EntityIdSchema.ENTITY_ID_STATE_LABEL;
+import static com.hedera.node.app.service.entityid.impl.schemas.V0590EntityIdSchema.ENTITY_COUNTS_STATE_ID;
+import static com.hedera.node.app.service.entityid.impl.schemas.V0590EntityIdSchema.ENTITY_COUNTS_STATE_LABEL;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 
@@ -20,37 +25,38 @@ import com.hedera.hapi.node.state.common.EntityNumber;
 import com.hedera.hapi.node.state.entity.EntityCounts;
 import com.hedera.hapi.node.state.primitives.ProtoBytes;
 import com.hedera.hapi.node.state.token.Account;
-import com.hedera.node.app.hapi.utils.EntityType;
-import com.hedera.node.app.ids.ReadableEntityIdStoreImpl;
-import com.hedera.node.app.ids.WritableEntityIdStore;
+import com.hedera.hapi.platform.state.NodeId;
+import com.hedera.node.app.service.addressbook.ReadableAccountNodeRelStore;
 import com.hedera.node.app.service.addressbook.ReadableNodeStore;
+import com.hedera.node.app.service.addressbook.impl.ReadableAccountNodeRelStoreImpl;
 import com.hedera.node.app.service.addressbook.impl.ReadableNodeStoreImpl;
+import com.hedera.node.app.service.addressbook.impl.WritableAccountNodeRelStore;
 import com.hedera.node.app.service.addressbook.impl.WritableNodeStore;
 import com.hedera.node.app.service.addressbook.impl.schemas.V053AddressBookSchema;
+import com.hedera.node.app.service.entityid.EntityIdFactory;
+import com.hedera.node.app.service.entityid.ReadableEntityIdStore;
+import com.hedera.node.app.service.entityid.impl.ReadableEntityIdStoreImpl;
+import com.hedera.node.app.service.entityid.impl.WritableEntityIdStoreImpl;
 import com.hedera.node.app.service.token.ReadableAccountStore;
 import com.hedera.node.app.spi.fixtures.ids.FakeEntityIdFactoryImpl;
-import com.hedera.node.app.spi.ids.ReadableEntityIdStore;
+import com.hedera.node.app.spi.validation.ExpiryValidator;
 import com.hedera.node.config.data.HederaConfig;
 import com.hedera.node.config.testfixtures.HederaTestConfigBuilder;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import com.swirlds.config.api.Configuration;
-import com.swirlds.platform.system.address.Address;
-import com.swirlds.platform.test.fixtures.addressbook.RandomAddressBookBuilder;
-import com.swirlds.state.lifecycle.EntityIdFactory;
-import com.swirlds.state.spi.ReadableSingletonStateBase;
 import com.swirlds.state.spi.ReadableStates;
-import com.swirlds.state.spi.WritableSingletonStateBase;
 import com.swirlds.state.spi.WritableStates;
+import com.swirlds.state.test.fixtures.FunctionReadableSingletonState;
+import com.swirlds.state.test.fixtures.FunctionWritableSingletonState;
 import com.swirlds.state.test.fixtures.MapReadableKVState;
 import com.swirlds.state.test.fixtures.MapWritableKVState;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import java.security.cert.X509Certificate;
 import java.util.List;
 import java.util.Random;
-import java.util.Spliterators;
 import java.util.function.Function;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
+import org.hiero.consensus.roster.RosterUtils;
+import org.hiero.consensus.roster.test.fixtures.RandomRosterBuilder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -58,6 +64,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 public class AddressBookTestBase {
+
     private static final String A_NAME = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa";
     private static final String B_NAME = "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb";
     private static final String C_NAME = "cccccccccccccccccccccccccccccccc";
@@ -107,20 +114,26 @@ public class AddressBookTestBase {
     final Key invalidKey = Key.newBuilder()
             .ecdsaSecp256k1((Bytes.fromHex("0000000000000000000000000000000000000000")))
             .build();
-    protected final AccountID accountId = idFactory.newAccountId(3);
+
+    protected final long WELL_KNOWN_NODE_ID = 1L;
+    protected final long WELL_KNOWN_ACCOUNT_ID = 3L;
+
+    protected final AccountID accountId = idFactory.newAccountId(WELL_KNOWN_ACCOUNT_ID);
 
     protected final AccountID payerId = idFactory.newAccountId(2);
     protected final byte[] grpcCertificateHash = "grpcCertificateHash".getBytes();
     protected final byte[] gossipCaCertificate = "gossipCaCertificate".getBytes();
-    protected final long WELL_KNOWN_NODE_ID = 1L;
+
     protected final EntityNumber nodeId =
             EntityNumber.newBuilder().number(WELL_KNOWN_NODE_ID).build();
-    protected final EntityNumber nodeId2 = EntityNumber.newBuilder().number(3L).build();
     protected final Timestamp consensusTimestamp =
             Timestamp.newBuilder().seconds(1_234_567L).build();
 
     protected static final Key aPrimitiveKey = Key.newBuilder()
             .ed25519(Bytes.wrap("01234567890123456789012345678901"))
+            .build();
+    protected static final Key bPrimitiveKey = Key.newBuilder()
+            .ed25519(Bytes.wrap("01234567890123456789098765432101"))
             .build();
     protected static final ProtoBytes edKeyAlias = new ProtoBytes(Bytes.wrap(asBytes(Key.PROTOBUF, aPrimitiveKey)));
     protected final AccountID alias = idFactory.newAccountIdWithAlias(edKeyAlias.value());
@@ -150,13 +163,19 @@ public class AddressBookTestBase {
     protected Node node;
 
     @Mock
+    protected Account account;
+
+    @Mock
     protected ReadableStates readableStates;
 
     @Mock
     protected WritableStates writableStates;
 
+    @Mock
+    protected ExpiryValidator expiryValidator;
+
     protected ReadableEntityIdStore readableEntityCounters;
-    protected WritableEntityIdStore writableEntityCounters;
+    protected WritableEntityIdStoreImpl writableEntityCounters;
 
     protected MapReadableKVState<EntityNumber, Node> readableNodeState;
     protected MapWritableKVState<EntityNumber, Node> writableNodeState;
@@ -164,115 +183,140 @@ public class AddressBookTestBase {
     protected ReadableNodeStore readableStore;
     protected WritableNodeStore writableStore;
 
+    protected MapReadableKVState<AccountID, NodeId> readableAccountNodeRelState;
+    protected MapWritableKVState<AccountID, NodeId> writableAccountNodeRelState;
+    protected ReadableAccountNodeRelStore readableAccountNodeRelStore;
+    protected WritableAccountNodeRelStore writableAccountNodeRelStore;
+
     @BeforeEach
     void commonSetUp() {
         givenValidNode();
-        refreshStoresWithCurrentNodeInReadable();
+        rebuildState(1);
     }
 
-    protected void refreshStoresWithCurrentNodeInReadable() {
-        givenEntityCountersWithOneNodeInWritable();
-        readableNodeState = readableNodeState();
-        writableNodeState = emptyWritableNodeState();
-        given(readableStates.<EntityNumber, Node>get(NODES_KEY)).willReturn(readableNodeState);
-        given(writableStates.<EntityNumber, Node>get(NODES_KEY)).willReturn(writableNodeState);
-        readableStore = new ReadableNodeStoreImpl(readableStates, readableEntityCounters);
-        writableStore = new WritableNodeStore(writableStates, writableEntityCounters);
-    }
-
-    protected void givenEntityCounters() {
-        given(writableStates.getSingleton(ENTITY_ID_STATE_KEY))
-                .willReturn(new WritableSingletonStateBase<>(
-                        ENTITY_ID_STATE_KEY, () -> EntityNumber.newBuilder().build(), c -> {}));
-        given(writableStates.getSingleton(ENTITY_COUNTS_KEY))
-                .willReturn(new WritableSingletonStateBase<>(ENTITY_COUNTS_KEY, () -> EntityCounts.DEFAULT, c -> {}));
-        given(readableStates.getSingleton(ENTITY_ID_STATE_KEY))
-                .willReturn(new ReadableSingletonStateBase<>(
-                        ENTITY_ID_STATE_KEY, () -> EntityNumber.newBuilder().build()));
-        given(readableStates.getSingleton(ENTITY_COUNTS_KEY))
-                .willReturn(new ReadableSingletonStateBase<>(ENTITY_COUNTS_KEY, () -> EntityCounts.DEFAULT));
-        readableEntityCounters = new ReadableEntityIdStoreImpl(readableStates);
-        writableEntityCounters = new WritableEntityIdStore(writableStates);
-    }
-
-    protected void givenEntityCountersWithOneNodeInWritable() {
-        given(writableStates.getSingleton(ENTITY_ID_STATE_KEY))
-                .willReturn(new WritableSingletonStateBase<>(
-                        ENTITY_ID_STATE_KEY, () -> EntityNumber.newBuilder().build(), c -> {}));
-        given(writableStates.getSingleton(ENTITY_COUNTS_KEY))
-                .willReturn(new WritableSingletonStateBase<>(
-                        ENTITY_COUNTS_KEY,
-                        () -> EntityCounts.newBuilder().numNodes(1).build(),
+    protected void givenEntityCounters(int num) {
+        given(writableStates.getSingleton(ENTITY_ID_STATE_ID))
+                .willReturn(new FunctionWritableSingletonState<>(
+                        ENTITY_ID_STATE_ID,
+                        ENTITY_ID_STATE_LABEL,
+                        () -> EntityNumber.newBuilder().build(),
                         c -> {}));
-        given(readableStates.getSingleton(ENTITY_ID_STATE_KEY))
-                .willReturn(new ReadableSingletonStateBase<>(
-                        ENTITY_ID_STATE_KEY, () -> EntityNumber.newBuilder().build()));
-        given(readableStates.getSingleton(ENTITY_COUNTS_KEY))
-                .willReturn(new ReadableSingletonStateBase<>(
-                        ENTITY_COUNTS_KEY,
-                        () -> EntityCounts.newBuilder().numNodes(1).build()));
+        given(writableStates.getSingleton(ENTITY_COUNTS_STATE_ID))
+                .willReturn(new FunctionWritableSingletonState<>(
+                        ENTITY_COUNTS_STATE_ID,
+                        ENTITY_COUNTS_STATE_LABEL,
+                        () -> EntityCounts.newBuilder().numNodes(num).build(),
+                        c -> {}));
+        given(readableStates.getSingleton(ENTITY_ID_STATE_ID))
+                .willReturn(new FunctionReadableSingletonState<>(
+                        ENTITY_ID_STATE_ID, ENTITY_ID_STATE_LABEL, () -> EntityNumber.newBuilder()
+                                .build()));
+        given(readableStates.getSingleton(ENTITY_COUNTS_STATE_ID))
+                .willReturn(new FunctionReadableSingletonState<>(
+                        ENTITY_COUNTS_STATE_ID,
+                        ENTITY_COUNTS_STATE_LABEL,
+                        () -> EntityCounts.newBuilder().numNodes(num).build()));
         readableEntityCounters = new ReadableEntityIdStoreImpl(readableStates);
-        writableEntityCounters = new WritableEntityIdStore(writableStates);
+        writableEntityCounters = new WritableEntityIdStoreImpl(writableStates);
     }
 
-    protected void refreshStoresWithCurrentNodeInBothReadableAndWritable() {
-        givenEntityCountersWithOneNodeInWritable();
-        readableNodeState = readableNodeState();
-        writableNodeState = writableNodeStateWithOneKey();
-        given(readableStates.<EntityNumber, Node>get(NODES_KEY)).willReturn(readableNodeState);
-        given(writableStates.<EntityNumber, Node>get(NODES_KEY)).willReturn(writableNodeState);
+    /**
+     * Creates node and account-node relationship states for testing.
+     * <p>
+     * This method initializes both readable and writable states for nodes and their
+     * account relationships, populating them with the specified number of nodes.
+     * </p>
+     *
+     * @param nodeCount The number of nodes to include in the states.
+     *                  If 1 or greater, the first node will be the predefined
+     *                  WELL_KNOWN_NODE associated with WELL_KNOWN_ACCOUNT.
+     */
+    protected void rebuildState(int nodeCount) {
+        givenEntityCounters(nodeCount);
+        readableNodeState = readableNodeStateBuilder(nodeCount).build();
+        writableNodeState = writableNodeStateBuilder(nodeCount).build();
+        readableAccountNodeRelState = readableAccNodeRelState(nodeCount);
+        writableAccountNodeRelState = writableAccNodeRelState(nodeCount);
+
+        given(readableStates.<EntityNumber, Node>get(NODES_STATE_ID)).willReturn(readableNodeState);
+        given(writableStates.<EntityNumber, Node>get(NODES_STATE_ID)).willReturn(writableNodeState);
+        given(readableStates.<AccountID, NodeId>get(ACCOUNT_NODE_REL_STATE_ID)).willReturn(readableAccountNodeRelState);
+        given(writableStates.<AccountID, NodeId>get(ACCOUNT_NODE_REL_STATE_ID)).willReturn(writableAccountNodeRelState);
+
         readableStore = new ReadableNodeStoreImpl(readableStates, readableEntityCounters);
-        final var configuration = HederaTestConfigBuilder.createConfig();
         writableStore = new WritableNodeStore(writableStates, writableEntityCounters);
-    }
-
-    protected void refreshStoresWithCurrentNodeInWritable() {
-        givenEntityCountersWithOneNodeInWritable();
-        writableEntityCounters.incrementEntityTypeCount(EntityType.NODE);
-        writableNodeState = writableNodeStateWithOneKey();
-        given(writableStates.<EntityNumber, Node>get(NODES_KEY)).willReturn(writableNodeState);
-        final var configuration = HederaTestConfigBuilder.createConfig();
-        writableStore = new WritableNodeStore(writableStates, writableEntityCounters);
-    }
-
-    protected void refreshStoresWithMoreNodeInWritable() {
-        givenEntityCounters();
-        writableNodeState = writableNodeStateWithMoreKeys();
-        given(writableStates.<EntityNumber, Node>get(NODES_KEY)).willReturn(writableNodeState);
-        final var configuration = HederaTestConfigBuilder.createConfig();
-        writableStore = new WritableNodeStore(writableStates, writableEntityCounters);
+        readableAccountNodeRelStore = new ReadableAccountNodeRelStoreImpl(readableStates);
+        writableAccountNodeRelStore = new WritableAccountNodeRelStore(writableStates);
     }
 
     @NonNull
-    protected MapWritableKVState<EntityNumber, Node> emptyWritableNodeState() {
-        return MapWritableKVState.<EntityNumber, Node>builder(NODES_KEY).build();
+    protected MapReadableKVState.Builder<EntityNumber, Node> readableNodeStateBuilder(int nodeCount) {
+        final var builder = MapReadableKVState.<EntityNumber, Node>builder(NODES_STATE_ID, NODES_STATE_LABEL);
+        if (nodeCount >= 1) {
+            // add current node
+            builder.value(nodeId, node);
+            // fill the rest nodes
+            for (int i = 1; i < nodeCount; i++) {
+                builder.value(
+                        EntityNumber.newBuilder().number(i + WELL_KNOWN_NODE_ID).build(), mock(Node.class));
+            }
+        }
+        return builder;
     }
 
     @NonNull
-    protected MapWritableKVState<EntityNumber, Node> writableNodeStateWithOneKey() {
-        return MapWritableKVState.<EntityNumber, Node>builder(NODES_KEY)
-                .value(nodeId, node)
-                .build();
+    protected MapWritableKVState.Builder<EntityNumber, Node> writableNodeStateBuilder(int nodeCount) {
+        final var builder = MapWritableKVState.<EntityNumber, Node>builder(NODES_STATE_ID, NODES_STATE_LABEL);
+        if (nodeCount >= 1) {
+            // add current node
+            builder.value(nodeId, node);
+            // fill the rest nodes
+            for (int i = 1; i < nodeCount; i++) {
+                builder.value(
+                        EntityNumber.newBuilder().number(i + WELL_KNOWN_NODE_ID).build(), mock(Node.class));
+            }
+        }
+        return builder;
     }
 
     @NonNull
-    protected MapWritableKVState<EntityNumber, Node> writableNodeStateWithMoreKeys() {
-        return MapWritableKVState.<EntityNumber, Node>builder(NODES_KEY)
-                .value(nodeId, node)
-                .value(nodeId2, mock(Node.class))
-                .build();
+    protected MapReadableKVState<AccountID, NodeId> readableAccNodeRelState(int nodeCount) {
+        final var builder =
+                MapReadableKVState.<AccountID, NodeId>builder(ACCOUNT_NODE_REL_STATE_ID, ACCOUNT_NODE_REL_STATE_LABEL);
+        if (nodeCount >= 1) {
+            // add current node
+            builder.value(
+                    node.accountId(), NodeId.newBuilder().id(node.nodeId()).build());
+            // fill the rest nodes
+            for (int i = 1; i < nodeCount; i++) {
+                builder.value(
+                        AccountID.newBuilder()
+                                .accountNum(i + WELL_KNOWN_ACCOUNT_ID)
+                                .build(),
+                        NodeId.newBuilder().id(i + WELL_KNOWN_NODE_ID).build());
+            }
+        }
+        return builder.build();
     }
 
     @NonNull
-    protected MapReadableKVState<EntityNumber, Node> readableNodeState() {
-        return MapReadableKVState.<EntityNumber, Node>builder(NODES_KEY)
-                .value(nodeId, node)
-                .build();
-    }
-
-    @NonNull
-    protected MapReadableKVState.Builder<EntityNumber, Node> emptyReadableNodeStateBuilder() {
-        return MapReadableKVState.builder(NODES_KEY);
+    protected MapWritableKVState<AccountID, NodeId> writableAccNodeRelState(int nodeCount) {
+        final var builder =
+                MapWritableKVState.<AccountID, NodeId>builder(ACCOUNT_NODE_REL_STATE_ID, ACCOUNT_NODE_REL_STATE_LABEL);
+        if (nodeCount >= 1) {
+            // add current node
+            builder.value(
+                    node.accountId(), NodeId.newBuilder().id(node.nodeId()).build());
+            // fill the rest nodes
+            for (int i = 1; i < nodeCount; i++) {
+                builder.value(
+                        AccountID.newBuilder()
+                                .accountNum(i + WELL_KNOWN_ACCOUNT_ID)
+                                .build(),
+                        NodeId.newBuilder().id(i + WELL_KNOWN_NODE_ID).build());
+            }
+        }
+        return builder.build();
     }
 
     protected void givenValidNode() {
@@ -291,7 +335,9 @@ public class AddressBookTestBase {
                 0,
                 deleted,
                 key,
-                false);
+                false,
+                null,
+                List.of());
     }
 
     protected void givenValidNodeWithAdminKey(Key adminKey) {
@@ -306,7 +352,9 @@ public class AddressBookTestBase {
                 0,
                 false,
                 adminKey,
-                false);
+                false,
+                null,
+                List.of());
     }
 
     protected Node createNode() {
@@ -323,20 +371,26 @@ public class AddressBookTestBase {
                 .build();
     }
 
-    protected Key mockPayerLookup(Key key, AccountID contextPayerId, ReadableAccountStore accountStore) {
+    protected void mockAccountLookup(Key key, AccountID contextPayerId, ReadableAccountStore accountStore) {
         final var account = mock(Account.class);
         given(account.key()).willReturn(key);
         given(accountStore.getAccountById(contextPayerId)).willReturn(account);
-        return key;
+    }
+
+    protected void mockAccountKeyOrThrow(Key key, AccountID contextPayerId, ReadableAccountStore accountStore) {
+        final var account = mock(Account.class);
+        given(account.keyOrThrow()).willReturn(key);
+        given(accountStore.getAccountById(contextPayerId)).willReturn(account);
     }
 
     public static List<X509Certificate> generateX509Certificates(final int n) {
-        final var randomAddressBook = RandomAddressBookBuilder.create(new Random())
-                .withSize(n)
+        final var roster = RandomRosterBuilder.create(new Random())
                 .withRealKeysEnabled(true)
+                .withSize(n)
                 .build();
-        return StreamSupport.stream(Spliterators.spliteratorUnknownSize(randomAddressBook.iterator(), 0), false)
-                .map(Address::getSigCert)
-                .collect(Collectors.toList());
+
+        return roster.rosterEntries().stream()
+                .map(RosterUtils::fetchGossipCaCertificate)
+                .toList();
     }
 }
