@@ -3,8 +3,11 @@ package com.hedera.services.bdd.spec;
 
 import static com.hedera.node.app.hapi.utils.CommonPbjConverters.fromPbj;
 import static com.hedera.services.bdd.spec.queries.QueryVerbs.getTxnRecord;
+import static com.hedera.services.bdd.spec.transactions.TxnUtils.asId;
 import static com.hedera.services.bdd.spec.transactions.TxnUtils.asIdWithAlias;
 import static com.hedera.services.bdd.spec.transactions.TxnUtils.extractTxnId;
+import static com.hedera.services.bdd.suites.HapiSuite.ONE_HBAR;
+import static com.hedera.services.bdd.suites.HapiSuite.ONE_HUNDRED_HBARS;
 import static java.util.Collections.EMPTY_LIST;
 import static java.util.stream.Collectors.toList;
 
@@ -28,7 +31,6 @@ import com.hedera.services.bdd.spec.keys.SigMapGenerator;
 import com.hedera.services.bdd.spec.queries.meta.HapiGetTxnRecord;
 import com.hedera.services.bdd.spec.transactions.TxnUtils;
 import com.hedera.services.bdd.spec.utilops.mod.BodyMutation;
-import com.hedera.services.bdd.suites.HapiSuite;
 import com.hederahashgraph.api.proto.java.AccountID;
 import com.hederahashgraph.api.proto.java.CustomFeeLimit;
 import com.hederahashgraph.api.proto.java.Duration;
@@ -43,7 +45,6 @@ import com.hederahashgraph.api.proto.java.TransactionRecord;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HexFormat;
@@ -123,7 +124,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
     protected Optional<String> metadata = Optional.empty();
     protected Optional<String> payer = Optional.empty();
     protected Optional<Boolean> genRecord = Optional.empty();
-    protected Optional<AccountID> node = Optional.empty();
+    protected Optional<String> node = Optional.empty();
     protected Optional<Supplier<AccountID>> nodeSupplier = Optional.empty();
     protected OptionalDouble usdFee = OptionalDouble.empty();
     protected Optional<Integer> retryLimits = Optional.empty();
@@ -168,8 +169,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
     }
 
     protected AccountID targetNodeFor(final HapiSpec spec) {
-        fixNodeFor(spec);
-        return node.get();
+        return fixNodeFor(spec);
     }
 
     protected void configureTlsFor(final HapiSpec spec) {
@@ -182,17 +182,17 @@ public abstract class HapiSpecOperation implements SpecOperation {
                 : spec.setup().txnProtoStructure();
     }
 
-    protected void fixNodeFor(final HapiSpec spec) {
+    protected AccountID fixNodeFor(final HapiSpec spec) {
         if (node.isPresent()) {
-            return;
+            return asId(node.get(), spec);
         }
         if (nodeSupplier.isPresent()) {
-            node = Optional.of(nodeSupplier.get().get());
+            return nodeSupplier.get().get();
         } else {
             if (spec.setup().nodeSelector() == HapiSpecSetup.NodeSelection.RANDOM) {
-                node = Optional.of(randomNodeFrom(spec));
+                return randomNodeFrom(spec);
             } else {
-                node = Optional.of(spec.setup().defaultNode());
+                return spec.setup().defaultNode();
             }
         }
     }
@@ -207,9 +207,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
         try {
             final boolean hasCompleteLifecycle = submitOp(spec);
 
-            if (shouldRegisterTxn) {
-                registerTxnSubmitted(spec);
-            }
+            maybeRegisterTxnSubmitted(spec);
 
             if (hasCompleteLifecycle) {
                 assertExpectationsGiven(spec);
@@ -229,11 +227,9 @@ public abstract class HapiSpecOperation implements SpecOperation {
         return Optional.empty();
     }
 
-    private void registerTxnSubmitted(final HapiSpec spec) throws Throwable {
-        if (txnSubmitted != Transaction.getDefaultInstance()) {
-            spec.registry().saveBytes(txnName, txnSubmitted.toByteString());
-            final TransactionID txnId = extractTxnId(txnSubmitted);
-            spec.registry().saveTxnId(txnName, txnId);
+    protected void maybeRegisterTxnSubmitted(final HapiSpec spec) throws Throwable {
+        if (shouldRegisterTxn) {
+            registerTransaction(spec, txnName, txnSubmitted);
         }
     }
 
@@ -272,7 +268,8 @@ public abstract class HapiSpecOperation implements SpecOperation {
             if (omitNodeAccount) {
                 builder.clearNodeAccountID();
             } else {
-                node.ifPresent(builder::setNodeAccountID);
+                final var nodeAccountId = fixNodeFor(spec);
+                builder.setNodeAccountID(nodeAccountId);
             }
             validDurationSecs.ifPresent(s -> builder.setTransactionValidDuration(
                     Duration.newBuilder().setSeconds(s).build()));
@@ -301,7 +298,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
             final double tinybarFee = centsFee
                     / spec.ratesProvider().rates().getCentEquiv()
                     * spec.ratesProvider().rates().getHbarEquiv()
-                    * HapiSuite.ONE_HBAR;
+                    * ONE_HBAR;
             fee = Optional.of((long) tinybarFee);
         }
         Consumer<TransactionBody.Builder> netDef = fee.map(amount -> minDef.andThen(b -> b.setTransactionFee(amount)))
@@ -322,9 +319,14 @@ public abstract class HapiSpecOperation implements SpecOperation {
         } else {
             final Key payerKey =
                     spec.registry().getKey(payer.orElse(spec.setup().defaultPayerName()));
-            final int numPayerKeys = hardcodedNumPayerKeys.orElse(spec.keys().controlledKeyCount(payerKey, overrides));
-            final long customFee = feeFor(spec, provisional, numPayerKeys);
-            netDef = netDef.andThen(b -> b.setTransactionFee(customFee));
+            if (spec.simpleFeesEnabled()) {
+                netDef = netDef.andThen(b -> b.setTransactionFee(ONE_HUNDRED_HBARS));
+            } else {
+                final int numPayerKeys =
+                        hardcodedNumPayerKeys.orElse(spec.keys().controlledKeyCount(payerKey, overrides));
+                final long customFee = feeFor(spec, provisional, numPayerKeys);
+                netDef = netDef.andThen(b -> b.setTransactionFee(customFee));
+            }
             txn = getSigned(spec, spec.txns().getReadyToSign(netDef, bodyMutation, spec), keys);
         }
 
@@ -389,14 +391,12 @@ public abstract class HapiSpecOperation implements SpecOperation {
                 : spec.keys().sign(spec, builder, keys, overrides);
     }
 
-    public Map<Key, SigControl> setKeyControlOverrides(final HapiSpec spec) {
+    public void setKeyControlOverrides(final HapiSpec spec) {
         if (controlOverrides.isPresent()) {
             overrides = new HashMap<>();
             Stream.of(controlOverrides.get())
                     .forEach(c -> overrides.put(lookupKey(spec, c.getKeyName()), c.getController()));
-            return overrides;
         }
-        return Collections.emptyMap();
     }
 
     public List<Key> signersToUseFor(final HapiSpec spec) {
@@ -404,7 +404,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
                 .map(f -> f.apply(spec))
                 .filter(k -> k != null && k != Key.getDefaultInstance())
                 .collect(toList());
-        if (!signers.isPresent()) {
+        if (signers.isEmpty()) {
             active.addAll(variableDefaultSigners().apply(spec));
         }
         return active;
@@ -415,7 +415,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
     }
 
     protected List<Function<HapiSpec, Key>> defaultSigners() {
-        return Arrays.asList(spec -> spec.registry().getKey(effectivePayer(spec)));
+        return List.of(spec -> spec.registry().getKey(effectivePayer(spec)));
     }
 
     protected Function<HapiSpec, List<Key>> variableDefaultSigners() {
@@ -449,7 +449,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
             helper.add("sigs", FeeBuilder.getSignatureCount(txnSubmitted));
         }
         payer.ifPresent(a -> helper.add("payer", a));
-        node.ifPresent(id -> helper.add("node", HapiPropertySource.asAccountString(id)));
+        node.ifPresent(id -> helper.add("node", id));
         return helper;
     }
 
@@ -457,9 +457,34 @@ public abstract class HapiSpecOperation implements SpecOperation {
         return payer;
     }
 
+    public String getTxnName() {
+        return txnName;
+    }
+
+    public boolean shouldRegisterTxn() {
+        return shouldRegisterTxn;
+    }
+
     protected ByteString rationalize(final String expectedLedgerId) {
         final var hex = expectedLedgerId.substring(2);
         final var bytes = HexFormat.of().parseHex(hex);
         return ByteString.copyFrom(bytes);
+    }
+
+    /**
+     * Registers a transaction in a {@link HapiSpec}'s registry by a given name
+     *
+     * @param spec the spec to register the transaction with
+     * @param txnName the name given to reference the transaction
+     * @param txn the value to store for the given name
+     * @throws Throwable if no transaction ID can be extracted from the given `txn` param
+     */
+    public static void registerTransaction(final HapiSpec spec, final String txnName, final Transaction txn)
+            throws Throwable {
+        if (txn != Transaction.getDefaultInstance()) {
+            spec.registry().saveBytes(txnName, txn.toByteString());
+            final TransactionID txnId = extractTxnId(txn);
+            spec.registry().saveTxnId(txnName, txnId);
+        }
     }
 }
